# send-notion-todos-python

./: .gitignore  README.md  pyproject.toml
send_todo_email/: api.py  index.html  main.py  task.py
